--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,9 @@ Jinja2==3.1.3
 jwcrypto==1.5.4
 MarkupSafe==2.1.5
 msgpack==1.0.7
+mysql==0.0.3
+mysql-connector-python==8.3.0
+mysqlclient==2.2.4
 oauth2client==4.1.3
 packaging==23.2
 proto-plus==1.23.0
